1999-10-27  Elliot Lee  <sopwith@redhat.com>
	* gnome-util.c: Use g_strdup not strdup.

1999-10-06  Owen Taylor  <otaylor@redhat.com>

	* gnome-config.c (access_config_extended): Always refill
	the cache with valid values immediately after invalidating
	this. This simplifies code, and (more importantly) fixes
	a bug where we could return with cache_filename_value2
	pointing to freed memory, and then later try to free
	it again. (Bug #2618)

1999-10-05  Owen Taylor  <otaylor@redhat.com>

	(Bug #2593)
	* gnome-i18n.c (read_aliases): Fix a memory leak by not
	overwriting old entries in the alias hash table.

	* gnome-dentry.c (gnome_desktop_entry_save): Fix a mem-leak
	when saving desktop entries with comments.

1999-10-04  Elliot Lee  <sopwith@redhat.com>
	* gnome-sound.c: Don't set audio stream byte order - use what audiofile gives
	us.

1999-10-04  Elliot Lee  <sopwith@redhat.com>
	* gnome-i18n.c: Revert a bugnum-less commit.
	
Mon Oct 04 11:24:51 1999  George Lebl  <jirka@5z.com>

	* gnome-i18n.c: in case the aliases would have a real infinite
	  loop of the kind a=b, b=a, give up after 50 lookups

1999-09-29  Elliot Lee  <sopwith@redhat.com>

	* gnome-exec.c: Fix strange race condition. I don't think pipes
 	are persistent across multiple forks() - in this case the child
 	was closing the read end of the pipe, and the child of the child
 	was getting SIGPIPE even though the parent had the fd open still.

Sun Sep 26 10:37:26 1999  George Lebl  <jirka@5z.com>

	* gnome-i18n.c from KUSANO Takayuki <AE5T-KSN@asahi-net.or.jp> to
	  avoid infinite loops in alias lookup

1999-09-21  Federico Mena Quintero  <federico@redhat.com>

	* gnome-i18n.c (gnome_i18n_init): Take out the patch for the
	umpteenth time.  As was discussed on gnome-hackers, it is
	Wrong(tm) to set an arbitrary default value for LC_ALL.

1999-09-19  Owen Taylor  <otaylor@redhat.com>

	* gnome-exec.c (gnome_execute_async_with_env_fds): Return
	  -1 in case of failure. Also, some code cleanups.
